@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+Interface:
+* New class Lingua::Interset::Converter implements conversion between two physical tagsets including caching.
+
+
+
 2.032     2015-01-26 23:27:27+01:00 Europe/Prague
 
 Interface:
